tests/NormalTests/paczka1/fuzzy1/10928374.err
Error in line 9: f5J A33 29,0
Error in line 14: S35 S35 99,6
Error in line 15: CeEXdueXib2 A10 84,1
Error in line 30: YkiCKT A10 277,29
Error in line 23: CeEXdueXib2 A352 76,0
Error in line 33: PgwiM9M2sa A10 8,2
